Fix elements under nav bar on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,12 @@ body {
   --safe-bottom: 30px;
   --safe-right: env(safe-area-inset-right);
   --safe-left: env(safe-area-inset-left); */
+
+  /* Pad the body to account for the safe area */
+  padding-top: var(--safe-top);
+  padding-bottom: var(--safe-bottom);
+  padding-left: var(--safe-left);
+  padding-right: var(--safe-right);
 }
 
 #root {
